add in permanent adverts disk I/O problem